# MyOutboundEngine

./: .env.example  .gitignore  README.md  config.toml  pyproject.toml
src/outbound/: __init__.py  cli.py  config.py  models.py  store.py
src/outbound/context/: __init__.py  ingest.py
src/outbound/leads/: __init__.py  csv_loader.py
